'Generador de UML utilizando plantUML

@startuml AnalizadorSimetria

class AnalizadorSimetria {
	landmarks
	landmarksNorm
	frame
	tipoFeeder
	tipoExtractor
	getFrame()
	getAsimetria()
	getLandmarks
	setFeeder()
	setExtractor()
	step()
}

abstract class Feeder{
	propiedades
	metodos()
}

abstract class ExtractorLandmarks{
	propiedades
	metodos()
}

class FrameLogger{
	propiedades
	metodos()
}

class LandmarksLogger{
	propiedades
	metodos()
}

class AnalizadorLandmarks {
	propiedades
	metodos()
}
AnalizadorSimetria *.. Feeder : **ptrFeeder
AnalizadorSimetria *.. ExtractorLandmarks : **ptrExtractor
AnalizadorSimetria *.. FrameLogger : **ptrVideoLogger
AnalizadorSimetria *.. LandmarksLogger : **ptrLandmarksLogger
AnalizadorSimetria *.. AnalizadorLandmarks

@enduml




@startuml proyectoVision

abstract class Feeder{
	getFrame()
}

class FrameLogger{
	log()
}

class LandmarksLogger{
	log()
}

FrameLogger <- Feeder

Feeder->ExtractorLandmarks

abstract class ExtractorLandmarks{
	landmarks
	getLandmarks()
	parseLandmarks()
}

ExtractorLandmarks->AnalizadorLandmarks
ExtractorLandmarks->LandmarksLogger
AnalizadorLandmarks->LandmarksLogger

class AnalizadorLandmarks{
	landmarks
	landmarksNorm
	getLandmarks()
	calcularAsimetria()
}
@enduml

@startuml structs
class Landmarks <<struct>>{
	vacio
	escala
	rotacion
	menton
	ojoIzq
	ojoDer
	cejaIzq
	cejaDer
	boca
	nariz
	empty()
}
@enduml

@startuml feeder

abstract class Feeder{
	frame
	getFeeder()
	getFrame()
}

class VideoFeeder{
	frame
	getFeeder()
	getFrame()
}
Feeder<|--VideoFeeder

class WebcamFeeder{
	frame
	getFeeder()
	getFrame()
}
Feeder<|--WebcamFeeder

class KinectFeeder{
	frame
	listener
	getFeeder()
	getFrame()
}
Feeder<|--KinectFeeder
@enduml

@startuml extractorLandmarks
abstract class ExtractorLandmarks{
	landmarks
	getLandmarks()
	parseLandmarks()
}
note left of ExtractorLandmarks
Debe proveerse un archivo 
de entrenamiento para el extractor
segun su tipo
end note

class ExtractorLandmarksOpenCV{
landmarks
getLandmarks()
}
ExtractorLandmarks<|-- ExtractorLandmarksOpenCV

class ExtractorLandmarksDlib{
landmarks
getLandmarks()
}
ExtractorLandmarks<|-- ExtractorLandmarksDlib

@enduml